--- a/ui/src/components/merch.html
+++ b/ui/src/components/merch.html
@@ -1,22 +1,21 @@
 <section id="merch" class="container my-5">
-    
     <h2 class="text-center my-5 fs-3 fw-bold mb-4 galeriaHeader">Ropa</h2>
 
     <div class="row">
 
-        <!-- Carrusel Prenda 1 -->
+        <!-- Producto 1: Camiseta -->
         <div class="col-md-6 col-12 mb-4">
             <div class="card">
                 <div id="carouselPrenda1" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://i.postimg.cc/7ZyG4t2Y/prenda1.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1">
+                            <img src="https://i.postimg.cc/7ZyG4t2Y/prenda1.avif" class="d-block w-100 rounded" alt="Imagen de Camiseta">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/1zm8ngBk/prenda1b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1 - Variante">
+                            <img src="https://i.postimg.cc/1zm8ngBk/prenda1b.avif" class="d-block w-100 rounded" alt="Variante de Camiseta">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/ZR00H11j/prenda1Modelo.avif" class="d-block w-100 rounded" alt="Prenda 1 en Modelo">
+                            <img src="https://i.postimg.cc/ZR00H11j/prenda1Modelo.avif" class="d-block w-100 rounded" alt="Camiseta en modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda1" data-bs-slide="prev">
@@ -30,31 +29,36 @@
                 </div>
                 <div class="card-body bg-secondary-subtle">
                     <h5 class="card-title text-center fw-bold">Camiseta</h5>
-                    <select class="form-select mb-3" aria-label="Selecciona la talla">
-                        <option selected>Selecciona la talla</option>
+                    <p class="fw-bold text-center">10€</p>
+                    <select class="form-select mb-3 talla" aria-label="Selecciona la talla de camiseta">
+                        <option selected disabled>Selecciona la talla</option>
                         <option value="S">S</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
                         <option value="XL">XL</option>
+                        <option value="XXL">XXL</option>
+                        <option value="XXXL">XXXL</option>
                     </select>
-                    <button class="btn fw-bold w-100 merch">Añadir al carrito</button>
+                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Camiseta" data-precio="10€" data-imagen="https://i.postimg.cc/445pYpQy/prenda1.jpg">
+                        Añadir al carrito
+                    </button>
                 </div>
             </div>
         </div>
 
-        <!-- Carrusel Prenda 2 -->
+        <!-- Producto 2: Sudadera -->
         <div class="col-md-6 col-12 mb-4">
             <div class="card">
                 <div id="carouselPrenda2" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://i.postimg.cc/LsxnzH0n/prenda2.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2">
+                            <img src="https://i.postimg.cc/LsxnzH0n/prenda2.avif" class="d-block w-100 rounded" alt="Imagen de Sudadera">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/Jng02p88/prenda2b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2 - Variante">
+                            <img src="https://i.postimg.cc/Jng02p88/prenda2b.avif" class="d-block w-100 rounded" alt="Variante de Sudadera">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/3NvN52rv/prenda2Modelo.avif" class="d-block w-100 rounded" alt="Prenda 2 en Modelo">
+                            <img src="https://i.postimg.cc/3NvN52rv/prenda2Modelo.avif" class="d-block w-100 rounded" alt="Sudadera en modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda2" data-bs-slide="prev">
@@ -68,14 +72,19 @@
                 </div>
                 <div class="card-body bg-secondary-subtle">
                     <h5 class="card-title text-center fw-bold">Sudadera</h5>
-                    <select class="form-select mb-3" aria-label="Selecciona la talla">
-                        <option selected>Selecciona la talla</option>
+                    <p class="fw-bold text-center">20€</p>
+                    <select class="form-select mb-3 talla" aria-label="Selecciona la talla de sudadera">
+                        <option selected disabled>Selecciona la talla</option>
                         <option value="S">S</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
                         <option value="XL">XL</option>
+                        <option value="XXL">XXL</option>
+                        <option value="XXXL">XXXL</option>
                     </select>
-                    <button class="btn fw-bold w-100 merch">Añadir al carrito</button>
+                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Sudadera" data-precio="20€" data-imagen="https://i.postimg.cc/63VnLZsH/prenda2.jpg">
+                        Añadir al carrito
+                      </button>
                 </div>
             </div>
         </div>
