--- a/ui/src/components/suple.html
+++ b/ui/src/components/suple.html
@@ -7,7 +7,7 @@
 
     <div class="row mt-5" id="productos"></div>
 
-    <div id="paginacion" class="text-center mt-4"></div>
+    <div id="paginacion" class="text-center my-2"></div>
 
 
 </section>
