--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -63,21 +63,21 @@ body {
 
     .heading {
         color: $white;
-        font-size: 1rem !important; 
-    
+        font-size: 1rem !important;
+
         @media (min-width: 768px) {
-            font-size: 1.5rem !important; 
+            font-size: 1.5rem !important;
         }
-    
+
         @media (min-width: 1024px) {
-            font-size: 2.2rem !important; 
+            font-size: 2.2rem !important;
         }
-    
+
         .frailes {
             color: $verde;
         }
     }
-    
+
 
     .login {
         background-color: $verde;
@@ -99,29 +99,33 @@ body {
 
 
     .heading-data {
-        .telefono, .correo {
-            font-size: 1.2rem ; 
+
+        .telefono,
+        .correo {
+            font-size: 1.2rem;
         }
-    
-  
+
+
         @media (max-width: 767px) {
-            .telefono, .correo {
-                font-size: 0.6rem ; 
+
+            .telefono,
+            .correo {
+                font-size: 0.6rem;
             }
         }
     }
-    
+
     .user-cart-bar {
 
         background-color: #4950578f;
         border-radius: 5rem;
 
-        .fa-shopping-cart{
+        .fa-shopping-cart {
             color: $verde;
         }
     }
 
-    .logout{
+    .logout {
         background-color: $verde;
         font-size: 0.8rem;
         color: $white;
@@ -129,7 +133,10 @@ body {
 
     }
 
-    .user-name{
+    .user-name {
         font-size: 0.8rem;
     }
+
+
+
 }
