form implementation for users

--- a/ui/src/components/formulario.html
+++ b/ui/src/components/formulario.html
@@ -44,7 +44,9 @@
             </fieldset>
 
             <div class="d-grid">
-                <input class="btn formBtn fw-bold fs-3 px-5 mt-4 py-2  " type="submit" value="Enviar">
+                <button class="btn formBtn fw-bold fs-3 px-5 mt-4 py-2" type="button" id="enviarFormulario">
+                    Enviar
+                </button>
             </div>
         </form>
 
