--- a/ui/src/components/clases.html
+++ b/ui/src/components/clases.html
@@ -10,7 +10,7 @@
                 <div class="card-header text-center fw-bold ">
                     Horarios de Clases
                 </div>
-                <img src="https://i.postimg.cc/d3cP3fc4/img-39.jpg" class="card-img-top rounded" alt="Imagen Servicio 1">
+                <img src="https://i.postimg.cc/5jdNpFpk/Horario2.jpg" class="card-img-top rounded" alt="Imagen Servicio 1">
             </div>
         </div>
 
