--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -10,13 +10,13 @@
             </span>
 
             <span class="d-flex align-items-center">
-                <!-- Botón para el panel de administración -->
+                <!--Panel de administración -->
                 <a href="/src/pages/panelAdmin.html" id="admin-panel-btn"
                     class="admin-panel-btn text-warning me-3 d-none" title="Panel de administración">
                     <i class="bi bi-gear-fill fs-4"></i>
                 </a>
 
-                <!-- Icono del carrito (usando Dropdown de Bootstrap) -->
+                <!-- Icono del carrito -->
                 <div class="dropdown carrito">
                     <button class="btn btn-link cart-icon me-3 dropdown-toggle" type="button" id="cartDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
