--- a/ui/src/components/admin.html
+++ b/ui/src/components/admin.html
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody id="users-table-body">
-                <!-- Se rellena con JavaScript -->
+                <!-- Se rellena con Usuarios -->
             </tbody>
         </table>
     </div>
