--- a/ui/src/components/log.html
+++ b/ui/src/components/log.html
@@ -27,8 +27,8 @@
                 <a href="/index.html" class="btn login-btn fw-bold px-2 mt-2 py-2">Volver al Inicio</a>
             </div>
 
-            <div class="text-center mt-3">
-                <a class="enlace text-decoration-none credenciales fw-bold" href="../pages/registro.html">Registrarse</a>
+            <div class="text-center mt-3 d-none register">
+                <a class="enlace  text-decoration-none credenciales fw-bold" href="../pages/registro.html">Registrarse</a>
             </div>
 
             <!-- Spinner de carga -->
