--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -1,4 +1,9 @@
 <header class="py-5 header">
+
+    <!-- VIDEO DE FONDO -->
+    <video autoplay muted loop playsinline class="bg-video">
+        <source src="/build/src/video/frailesfit.webm" type="video/webm">
+    </video>
     <div class="container-xl">
 
         <!-- Barra de usuario y carrito -->
