--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -2,7 +2,7 @@
 
     <!-- VIDEO DE FONDO -->
     <video autoplay muted loop playsinline class="bg-video">
-        <source src="/build/src/video/frailesfit.webm" type="video/webm">
+        <source src="/src/video/frailesfit.webm" type="video/webm">
     </video>
     <div class="container-xl">
 
