--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -1,10 +1,14 @@
 <header class="py-5 header">
 
-    <!-- VIDEO DE FONDO -->
-    <video autoplay muted loop playsinline class="bg-video">
-        <source src="/src/video/frailesfit.webm" type="video/webm">
-    </video>
     <div class="container-xl">
+
+        <!-- Video de fondo -->
+        <div class="envoltorio-video-fondo">
+            <video class="video-fondo" autoplay muted loop playsinline>
+                <source src="/src/video/frailesfit.webm" type="video/webm">
+            </video>
+        </div>
+
 
         <!-- Barra de usuario y carrito -->
         <div class="user-cart-bar d-flex justify-content-between my-4 align-items-center py-2 text-white">
