--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -2,141 +2,151 @@
 @use '../base/mixins' as m;
 
 body {
-  background-image: url(https://i.postimg.cc/wB1SVz6w/img-1.avif);
+    background-image: url(https://i.postimg.cc/wB1SVz6w/img-1.avif);
 }
 
 .header {
-  @include m.background-image('https://i.postimg.cc/YCdHR8QC/img-33.jpg'); // Imagen de fallback
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-  overflow: hidden;
-  z-index: -2;
-
-  // Video de fondo
-  video.bg-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-
-  // Capa para superponer contenido
-  .header-content {
+    height: 100vh;
     position: relative;
-    z-index: 1;
-  }
 
-  .navbar {
-    background-color: #343a4083;
-    border-radius: 2.5rem;
-  }
+    // Fondo de vídeo + imagen de respaldo
+    .envoltorio-video-fondo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: -1;
 
-  .navbar-nav .nav-link {
-    color: #f7f7f7 !important;
-    font-size: 1.125rem;
-    padding: 0.625rem 0.9375rem;
-  }
+        &::before {
+            content: '';
+            background-image: url('https://i.postimg.cc/YCdHR8QC/img-33.jpg');
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+        }
 
-  .navbar-nav .nav-link:hover {
-    color: $verde !important;
-  }
-
-  .form-control {
-    background-color: #ffffff;
-    color: #495057;
-    border-color: #ced4da;
-  }
-
-  .dropdown-menu {
-    background-color: #343a4083;
-  }
-
-  .dropdown-item {
-    color: $white;
-    font-weight: bold;
-
-    &:hover {
-      color: $dark;
-      background-color: $verde;
-    }
-  }
-
-  .logo {
-    border-radius: 50%;
-    max-width: 9rem;
-    height: auto;
-    object-fit: cover;
-  }
-
-  .heading {
-    color: $white;
-    font-size: 1rem !important;
-
-    @media (min-width: 768px) {
-      font-size: 1.5rem !important;
+        .video-fondo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     }
 
-    @media (min-width: 1024px) {
-      font-size: 2.2rem !important;
+    .navbar {
+        background-color: #343a4083;
+        border-radius: 2.5rem;
     }
 
-    .frailes {
-      color: $verde;
-    }
-  }
+    .navbar-nav .nav-link {
+        color: #f7f7f7 !important;
+        font-size: 1.125rem;
+        padding: 0.625rem 0.9375rem;
 
-  .login {
-    background-color: $verde;
-    color: $white;
-    border-radius: 0.375rem;
-
-    &:focus {
-      box-shadow: none;
+        &:hover {
+            color: $verde !important;
+        }
     }
 
-    &:hover {
-      background-color: $white;
-      color: $verde;
-    }
-  }
-
-  .heading-data {
-    .telefono,
-    .correo {
-      font-size: 1.2rem;
+    .form-control {
+        background-color: #ffffff;
+        color: #495057;
+        border-color: #ced4da;
     }
 
-    @media (max-width: 767px) {
-      .telefono,
-      .correo {
-        font-size: 0.6rem;
-      }
+    .dropdown-menu {
+        background-color: #343a4083;
     }
-  }
 
-  .user-cart-bar {
-    background-color: #4950578f;
-    border-radius: 5rem;
+    .dropdown-item {
+        color: $white;
+        font-weight: bold;
 
-    .fa-shopping-cart {
-      color: $verde;
+        &:hover {
+            color: $dark;
+            background-color: $verde;
+        }
     }
-  }
 
-  .logout {
-    background-color: $verde;
-    font-size: 0.8rem;
-    color: $white;
-    font-weight: bold;
-  }
+    .logo {
+        border-radius: 50%;
+        max-width: 9rem;
+        height: auto;
+        object-fit: cover;
+    }
 
-  .user-name {
-    font-size: 0.8rem;
-  }
+    .heading {
+        color: $white;
+        font-size: 1rem !important;
+
+        @media (min-width: 768px) {
+            font-size: 1.5rem !important;
+        }
+
+        @media (min-width: 1024px) {
+            font-size: 2.2rem !important;
+        }
+
+        .frailes {
+            color: $verde;
+        }
+    }
+
+    .login {
+        background-color: $verde;
+        color: $white;
+        border-radius: 0.375rem;
+
+        &:focus {
+            box-shadow: none;
+        }
+
+        &:hover {
+            background-color: $white;
+            color: $verde;
+        }
+    }
+
+    .heading-data {
+        .telefono,
+        .correo {
+            font-size: 1.2rem;
+        }
+
+        @media (max-width: 767px) {
+            .telefono,
+            .correo {
+                font-size: 0.6rem;
+            }
+        }
+    }
+
+    .user-cart-bar {
+        background-color: #4950578f;
+        border-radius: 5rem;
+
+        .fa-shopping-cart {
+            color: $verde;
+        }
+    }
+
+    .logout {
+        background-color: $verde;
+        font-size: 0.8rem;
+        color: $white;
+        font-weight: bold;
+    }
+
+    .user-name {
+        font-size: 0.8rem;
+    }
 }
