--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -92,11 +92,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/src/pages/contacto.html">Contacto</a>
                         </li>
+
                     </ul>
-
-
-
-                    <a href="/src/pages/login.html" class="btn fw-bold px-5 login">Login</a>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <a href="/src/pages/login.html" class="btn w-bold px-5 login">Login</a>
+                    </div>
 
 
                 </div>
