--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -108,7 +108,7 @@
 
 
     <div class="container-xl mt-1 text-center slide-derecha">
-        <h3 class="heading fs-1 ">
+        <h3 class="heading fs-1 m-0">
             ¡Lleva tu entrenamiento al siguiente nivel en <span class="fw-bold frailes">Frailes<span
                     class="text-white">Fit</span></span>!
         </h3>
