--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -50,7 +50,7 @@
         <nav class="navbar justify-content-between navbar-expand-lg navbar-dark slide">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logo img-fluid" src="https://i.postimg.cc/HnxRPCmZ/Frailes-Fit-Logo.png"
+                    <img class="logo img-fluid" src="https://i.postimg.cc/mrQMwCBN/Frailes-Fit-Logo2.png"
                         alt="Logo del Gimnasio">
                 </a>
 
@@ -60,7 +60,7 @@
                 </button>
 
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
+                <div class="collapse navbar-collapse d-lg-flex justify-content-around justify-content-center" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
                             <a class="nav-link active" href="/index.html">Inicio</a>
