--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -16,7 +16,7 @@ body {
         width: 100%;
         height: 100%;
         overflow: hidden;
-        z-index: -1;
+        z-index: -2;
 
         &::before {
             content: '';
@@ -28,7 +28,7 @@ body {
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: -2;
+            z-index: -3;
         }
 
         .video-fondo {
@@ -39,6 +39,11 @@ body {
             top: 0;
             left: 0;
         }
+    }
+
+    .slide-derecha{
+        position: absolute;
+        z-index: -1;
     }
 
     .navbar {
@@ -93,6 +98,8 @@ body {
         }
     }
 
+
+   
     .heading {
         color: $white;
         font-size: 1rem !important;
