--- a/ui/src/components/merch.html
+++ b/ui/src/components/merch.html
@@ -1,10 +1,10 @@
 <section id="merch" class="container my-5">
     <h2 class="text-center my-5 fs-3 fw-bold mb-4 galeriaHeader">Ropa</h2>
 
-    <div class="row">
+    <div class="row align-items-center justify-content-center">
 
         <!-- Producto 1: Camiseta -->
-        <div class="col-md-6 col-12 mb-4">
+        <div class="col-md-4 col-12 mb-4">
             <div class="card">
                 <div id="carouselPrenda1" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Producto 2: Sudadera -->
-        <div class="col-md-6 col-12 mb-4">
+        <div class="col-md-4 col-12 mb-4">
             <div class="card">
                 <div id="carouselPrenda2" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
