--- a/ui/src/components/planes.html
+++ b/ui/src/components/planes.html
@@ -9,16 +9,13 @@
                         <h3 class="text-center fw-bold">Inicio</h3>
                         <p class="text-center precio">4€ Día</p>
                         <ul class="list-unstyled">
-                            <li class="text-center mb-2">Rutinas!</li>
-                            <li class="text-center mb-2">Cercania</li>
-                            <li class="text-center mb-2">Trato Personalizado</li>
+                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Rutinas!</li>
+                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Cercania</li>
+                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Trato Personalizado</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
-                            <lord-icon src="https://cdn.lordicon.com/cukgelaw.json" trigger="hover" stroke="light"
-                                style="width:200px;height:200px">
-                            </lord-icon>
-
+                            <img class="footer__logo" src="https://i.postimg.cc/L5PTGBzT/logoGym1.avif" alt="Logo">
                         </div>
                     </div>
 
@@ -26,15 +23,13 @@
                         <h3 class="text-center fw-bold">Bonos</h3>
                         <p class="text-center precio">Mes 30€</p>
                         <ul class="list-unstyled">
-                            <li class="text-center mb-2">10 Días 15€</li>
-                            <li class="text-center mb-2">Bono Familiar:</li>
-                            <li class="text-center mb-2">50€</li>
+                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">💪🏽 10 Días 15€</li>
+                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">🫵🏽 Bono Familiar:</li>
+                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">🏆 50€</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
-                            <lord-icon src="https://cdn.lordicon.com/kkdnopsh.json" trigger="hover" stroke="light"
-                                state="hover-spending" style="width:200px;height:200px">
-                            </lord-icon>
+                            <img class="footer__logo" src="https://i.postimg.cc/Y2Lb4kJW/logogym2.avif" alt="Logo">
 
                         </div>
                     </div>
@@ -43,15 +38,12 @@
                         <h3 class="text-center fw-bold">Clases</h3>
                         <p class="text-center precio">25€ Mes</p>
                         <ul class="list-unstyled">
-                            <li class="text-center mb-2">Zumba y Pilates</li>
-                            <li class="text-center mb-2">5€ Clase</li>
+                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Zumba y Pilates</li>
+                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ 5€ Clase</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
-                            <lord-icon src="https://cdn.lordicon.com/cukgelaw.json" trigger="hover" stroke="light"
-                                style="width:200px;height:200px">
-                            </lord-icon>
-
+                            <img class="footer__logo" src="https://i.postimg.cc/X7MxdmbD/logogym3.avif" alt="Logo">
                         </div>
                     </div>
 
