--- a/ui/src/components/galeria.html
+++ b/ui/src/components/galeria.html
@@ -4,49 +4,49 @@
     <ul class="row list-unstyled galeria">
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente5">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/CLyLnv4y/img-20.jpg" data-src="https://i.postimg.cc/CLyLnv4y/img-20.jpg"  alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/CLyLnv4y/img-20.jpg" data-src="https://i.postimg.cc/CLyLnv4y/img-20.jpg"  alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente8">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/DZM3hzxk/img_(82).jpg" data-src="https://i.postimg.cc/DZM3hzxk/img_(82).jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/DZM3hzxk/img_(82).jpg" data-src="https://i.postimg.cc/DZM3hzxk/img_(82).jpg" alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente10">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/q7Qdmwn7/img_(79).jpg" data-src="https://i.postimg.cc/q7Qdmwn7/img_(79).jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/q7Qdmwn7/img_(79).jpg" data-src="https://i.postimg.cc/q7Qdmwn7/img_(79).jpg" alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente15">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/XJH4vL7P/img-1.jpg" data-src="https://i.postimg.cc/XJH4vL7P/img-1.jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/XJH4vL7P/img-1.jpg" data-src="https://i.postimg.cc/XJH4vL7P/img-1.jpg" alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente20">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/633xFZLf/img-5.jpg" data-src="https://i.postimg.cc/633xFZLf/img-5.jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/633xFZLf/img-5.jpg" data-src="https://i.postimg.cc/633xFZLf/img-5.jpg" alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente23">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/Kc1RM3ST/img_(8).jpg" data-src="https://i.postimg.cc/Kc1RM3ST/img_(8).jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/Kc1RM3ST/img_(8).jpg" data-src="https://i.postimg.cc/Kc1RM3ST/img_(8).jpg" alt="imagen galeria">
             </a>
         </li>
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente24">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" data-src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" data-src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" alt="imagen galeria">
             </a>
         </li>
         
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente27">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/d10z9mdb/imag-74.avif" data-src="https://i.postimg.cc/d10z9mdb/imag-74.avif" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable  rounded-5" src="https://i.postimg.cc/d10z9mdb/imag-74.avif" data-src="https://i.postimg.cc/d10z9mdb/imag-74.avif" alt="imagen galeria">
             </a>
         </li>
 
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente39">
-                <img class="img-fluid my-3 img-clickable d-md-none d-lg-block" src="https://i.postimg.cc/65RqHsQ5/img-12.jpg"
+                <img class="img-fluid my-3 img-clickable  rounded-5 d-md-none d-lg-block" src="https://i.postimg.cc/65RqHsQ5/img-12.jpg"
                 data-src="https://i.postimg.cc/65RqHsQ5/img-12.jpg" alt="imagen galeria">
             </a>
         </li>
