--- a/ui/src/components/merch.html
+++ b/ui/src/components/merch.html
@@ -9,13 +9,13 @@
                 <div id="carouselPrenda1" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://i.postimg.cc/7ZyG4t2Y/prenda1.avif" class="d-block w-100 rounded" alt="Imagen de Camiseta">
+                            <img src="https://i.postimg.cc/3JV976Ft/camiseta1.jpg" class="d-block w-100 rounded" alt="Imagen de Camiseta">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/1zm8ngBk/prenda1b.avif" class="d-block w-100 rounded" alt="Variante de Camiseta">
+                            <img src="https://i.postimg.cc/X7pxR3dZ/camiseta2.jpg" class="d-block w-100 rounded" alt="Variante de Camiseta">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/ZR00H11j/prenda1Modelo.avif" class="d-block w-100 rounded" alt="Camiseta en modelo">
+                            <img src="https://i.postimg.cc/52zgt3Pb/camiseta3.jpg" class="d-block w-100 rounded" alt="Camiseta en modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda1" data-bs-slide="prev">
@@ -39,7 +39,7 @@
                         <option value="XXL">XXL</option>
                         <option value="XXXL">XXXL</option>
                     </select>
-                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Camiseta" data-precio="10€" data-imagen="https://i.postimg.cc/445pYpQy/prenda1.jpg">
+                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Camiseta" data-precio="10€" data-imagen="https://i.postimg.cc/3JV976Ft/camiseta1.jpg">
                         Añadir al carrito
                     </button>
                 </div>
@@ -52,13 +52,13 @@
                 <div id="carouselPrenda2" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://i.postimg.cc/LsxnzH0n/prenda2.avif" class="d-block w-100 rounded" alt="Imagen de Sudadera">
+                            <img src="https://i.postimg.cc/TPX95DSm/sudadera1.jpg" class="d-block w-100 rounded" alt="Imagen de Sudadera">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/Jng02p88/prenda2b.avif" class="d-block w-100 rounded" alt="Variante de Sudadera">
+                            <img src="https://i.postimg.cc/8CBbRCQY/sudadera2.jpg" class="d-block w-100 rounded" alt="Variante de Sudadera">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.postimg.cc/3NvN52rv/prenda2Modelo.avif" class="d-block w-100 rounded" alt="Sudadera en modelo">
+                            <img src="https://i.postimg.cc/FRrVDQhH/sudadera3.jpg" class="d-block w-100 rounded" alt="Sudadera en modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda2" data-bs-slide="prev">
@@ -82,7 +82,7 @@
                         <option value="XXL">XXL</option>
                         <option value="XXXL">XXXL</option>
                     </select>
-                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Sudadera" data-precio="20€" data-imagen="https://i.postimg.cc/63VnLZsH/prenda2.jpg">
+                    <button class="merch text-center w-100 py-1 px-4 rounded-pill" data-producto="Sudadera" data-precio="20€" data-imagen="https://i.postimg.cc/TPX95DSm/sudadera1.jpg">
                         Añadir al carrito
                       </button>
                 </div>
