--- a/ui/src/components/planes.html
+++ b/ui/src/components/planes.html
@@ -5,13 +5,13 @@
             <div class="col-md-10">
                 <div class="row nuestros-planes">
 
-                    <div class="col-md-4 order-2 plan inicio mb-4 mb-md-0">
+                    <div class="col-md-4 order-2 plan inicio mb-4 mb-md-0 overflow-hidden">
                         <h3 class="text-center fw-bold">Inicio</h3>
                         <p class="text-center precio">4€ Día</p>
                         <ul class="list-unstyled">
-                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Rutinas!</li>
-                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Cercania</li>
-                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Trato Personalizado</li>
+                            <li class="text-center text-white text-bg-success rounded-4 fw-bold mb-2">Rutinas</li>
+                            <li class="text-center text-white text-bg-success rounded-4 fw-bold mb-2">Confianza</li>
+                            <li class="text-center text-white text-bg-success rounded-4 fw-bold mb-2">trato cercano</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
@@ -19,13 +19,13 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 order-1 order-md-2 plan negocio mb-4">
+                    <div class="col-md-4 order-1 order-md-2 plan negocio mb-4 overflow-hidden">
                         <h3 class="text-center fw-bold">Bonos</h3>
                         <p class="text-center precio">Mes 30€</p>
                         <ul class="list-unstyled">
-                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">💪🏽 10 Días 15€</li>
-                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">🫵🏽 Bono Familiar:</li>
-                            <li class="text-center text-white text-bg-dark rounded-5 fw-bold mb-2">🏆 50€</li>
+                            <li class="text-center text-white text-bg-dark rounded-4 fw-bold mb-2">10 Días 15€</li>
+                            <li class="text-center text-white text-bg-dark rounded-4 fw-bold mb-2">Bono Familiar:</li>
+                            <li class="text-center text-white text-bg-dark rounded-4 fw-bold mb-2">50€</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
@@ -34,12 +34,12 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 order-3 plan pro">
+                    <div class="col-md-4 order-3 plan pro overflow-hidden">
                         <h3 class="text-center fw-bold">Clases</h3>
                         <p class="text-center precio">25€ Mes</p>
                         <ul class="list-unstyled">
-                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ Zumba y Pilates</li>
-                            <li class="text-center text-white text-bg-success rounded-5 fw-bold mb-2">✅ 5€ Clase</li>
+                            <li class="text-center text-white text-bg-success rounded-4 fw-bold mb-2">Zumba y Pilates</li>
+                            <li class="text-center text-white text-bg-success rounded-4 fw-bold mb-2">5€ Clase</li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center">
 
