--- a/ui/src/components/admin.html
+++ b/ui/src/components/admin.html
@@ -10,7 +10,7 @@
             style="z-index: 1000; max-height: 200px; overflow-y: auto;"></ul>
     </div>
 
-    <!-- Tabla de usuario(s) -->
+    <!-- Tabla de usuario -->
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead class="table-dark text-center">
@@ -27,7 +27,7 @@
                 </tr>
             </thead>
             <tbody id="users-table-body">
-                <!-- Se rellenará con los datos del usuario seleccionado -->
+                <!-- Se rellenará con los datos del usuario -->
             </tbody>
         </table>
     </div>
